# django_template

./: README.md  docker-compose.local.yaml  pyproject.toml
docker/local/django/: Dockerfile  entrypoint.sh
envs/local/: postgres
src/django_template/: settings.py  urls.py
