[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Raúl <raulmartinezm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-environ = "^0.11.2"  # https://pypi.org/project/python-environ/
psycopg = "^3.1.18"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
